# lua-vm

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/lua_vm/: LuaVmPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/lua_vm_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
headers/: lua.h  luaconf.h
ios/: lua_vm.podspec
ios/Classes/: LuaVmPlugin.h  LuaVmPlugin.m  SwiftLuaVmPlugin.swift
ios/Classes/lua/: liolib.c  lmathlib.c  lobject.c  lstrlib.c
lib/: lua_vm.dart
test/: lua_vm_test.dart
